last list of example inspections added to brf

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -154,8 +154,7 @@
 									</p>
 							</div>
 
-						</div>
-					</div>
+
 					<div class="fix-10-12 left">
 						<h2 class="small bold">Traditionella besiktningar enligt AB-ABT</h2>
 
@@ -406,7 +405,7 @@
 
 						<!-- övriga tjänster -->
 						<h2 class="small bold">Övriga tjänster</h2>
-						<div class="accordion">
+						<div class="accordion margin-bottom-3">
 							<h3>Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
 							<div>
 								<ul>
@@ -511,13 +510,56 @@
 								</ul>
 							</div>
 						</div>
-
-
-
-
 					<!-- grid div end -->
 					</div>
-
+					<div class="fix-10-12">
+						<h2 class="small bold">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
+						<p class="small">
+							•	Målningsbesiktningar
+							<br>
+							•	Badrumsbesiktningar-råyta-tätskikt-färdigställt
+							<br>
+							•	Tvättstugebesiktningar
+							<br>
+							•	Köksbesiktningar
+							<br>
+							•	Dörrar-säkerhetsbesiktningar
+							<br>
+							•	Fönsterbesiktningar-balkongdörrar-personlig säkerhet
+							<br>
+							•	Stambesiktningar
+							<br>
+							•	Takbesiktningar-plåt-papp-tegel-solceller
+							<br>
+							•	Fasadbesiktningar
+							<br>
+							•	Stuprör
+							<br>
+							•	Mark-dränering-stödmurar
+							<br>
+							•	Lekplatsbesiktningar
+							<br>
+							•	Utemiljö; buskar, träd, parkeringsytor, cykelställ, gräsytor, asfaltsytor
+							<br>
+							•	Sedumtak-grönatak
+							<br>
+							•	Innergårdar
+							<br>
+							•	Garage-portar
+							<br>
+							•	Hiss
+							<br>
+							•	Sprinklers
+							<br>
+							•	Sopsugsbesiktning
+							<br>
+							•	Utomhusbelysning-laddstolpar
+							<br>
+							•	Balkongbesiktningar
+							<br>
+							•	Gårdshus-återvinning-källsortering
+						</p>
+					</div>
 					<br>
 					<br>
 					<div class="fix-10-12 left margin-bottom-5">
@@ -550,7 +592,8 @@
 						</script>
 						<a href="tel:0101654000" class="bold text-blue margin-left-3">Alternativt ring oss på: 010-165 40 00</a>
 					</div>
-
+				</div>
+			</div>
 
 
 
