--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -114,7 +114,7 @@
 			<div class="wrap">
 
 				<div class="fix-10-12" style="padding-top: 5%;">
-					<h1 class="hero" style="font-weight: 400;">Bostadsrättsföreningar</h1>
+					<h1 class="hero" style="font-weight: 400;">Besiktningstjänster för bostadsrättsföreningar</h1>
 					<p class="hero small">
 						Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för besiktningstjänster vid nyproduktion, ROT och KA för bostadsrättsföreningar.
 					</p>
