--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -113,7 +113,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero" style="font-weight: 400;">Entreprenadbesiktning</h1>
+						<h1 class="hero" style="font-weight: 400;">Entreprenadbesiktning för <br>nyproduktion och ROT</h1>
 						<p class="hero small">
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster
 							<br>för entreprenadbesiktning för nyproduktion och ROT samt KA.
@@ -173,7 +173,7 @@
 						<div class="fix-10-12 left">
 							<h2 class="small bold">Traditionella besiktningar enligt AB-ABT</h2>
 
-							<div class="accordion">
+							<div class="accordion" id="services">
 								<h3>Förbesiktning</h3>
 								<div>
 									<ul>
