forgot KA service

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -516,7 +516,34 @@
 								</li>
 							</ul>
 						</div>
-
+						<h3>Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
+						<div>
+							<ul>
+								<li class="col-5-12">
+									<p class="bold margin-bottom-1">Vid nyproduktion, om- och tillbyggnad där det behövs bygglov krävs en Kontrollansvarig (KA). En KA kan även behövas vid rivning eller markarbeten</p>
+									<p>
+										Den Kontrollansvarige ska kontrollera att de myndighetskrav och bygg- och branschregler som ställs på arbetena uppfylls. Dessa krav kan exempelvis avse ventilation, energianvändning, fuktsäkerhet, tillgänglighet samt att de för arbetena gällande säkerhetsreglerna uppfylls.
+									</p>
+									<p>Den kontrollansvarige ska vara certifierad, och ska anlitas och bekostas av byggherren/beställaren.</p>
+									<p>
+										Besiktningsman.se erbjuder certifierade Kontrollansvariga enligt gällande regler.
+										Vi erbjuder även kontrollansvarig i kombination med besiktningsman eller besiktningsgrupp.
+									</p>
+									<p>
+										Tjänsten kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster.
+										<br>
+										<br>
+										Pris offereras separat.
+									</p>
+									<p class="bold margin-bottom-1">Ur Boverkets information om Kontrollansvarig:</p>
+									<p>Du som ska bygga, riva eller utföra markarbeten kan behöva en kontrollansvarig, KA, för ditt projekt. Du behöver oftast inte en kontrollansvarig om du bara ska göra små ändringar av till exempel ett en- och tvåbostadshus. När du utför en åtgärd som varken kräver lov eller anmälan krävs aldrig en kontrollansvarig.</p>
+									<p>Den kontrollansvarige du anlitar måste vara certifierad. Kravet finns i EU:s tjänstedirektiv och innebär att bara personer som är certifierade får göra det en kontrollansvarig ska göra.</p>
+									<p>Den kontrollansvarige ska medverka till att ditt projekt uppfyller kraven i bygglagstiftningen. Den kontrollansvarige ska bland annat hjälpa dig att ta fram ett förslag till kontrollplan. Den kontrollansvarige ska också se till att kontrollplanen följs, vara med vid det tekniska samrådet, besiktningar och andra kontroller samt skriva ett utlåtande som ska vara underlag för byggnadsnämndens slutbesked.</p>
+									<p>Den kontrollansvarige måste ha en självständig ställning. Det betyder till exempel att han eller hon inte får vara nära släkt med den som utför åtgärden eller arbeta på samma företag.</p>
+									<p>För att bli certifierad krävs kunskap, erfarenhet och lämplighet för uppgiften. Certifieringar får endast utfärdas av certifieringsorgan, det vill säga företag som har ackrediterats för denna uppgift av myndigheten Swedac.</p>
+								</li>
+							</ul>
+						</div>
 					</div>
 				<!-- grid div end -->
 				</div>
