Fix for efterbesiktning, removed överlåtelsebesiktning

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -371,7 +371,41 @@
 								</li>
 							</ul>
 						</div>
-
+						<h3>Efterbesiktning</h3>
+						<div>
+							<ul>
+								<li class="col-5-12">
+									<h3 class="margin-bottom-1">
+										Efterbesiktning kan ske för att konstatera om fel som noterats vid tidigare besiktning har avhjälpts eller inte. Efterbesiktning kan påkallas av entreprenör eller beställare
+									</h3>
+									<p>
+										Besiktningsman.se erbjuder Efterbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 § 5(se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt. Vi erbjuder även komplett besiktningsgrupp.
+									</p>
+									<p>
+										Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats. Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar
+										<br>
+										<br>
+										Pris offereras separat.
+									</p>
+									<h3 class="margin-bottom-1">Enligt AB04 och ABT06 Kap 7 §5</h3>
+									<p>
+										”Part har rätt att påkalla efterbesiktning för konstaterande av om ett fel avhjälpts.
+										<br>Efterbesiktning verkställs utan dröjsmål efter avhjälpandet. Beställaren får också påkalla
+										<br>efterbesiktning om entreprenören underlåter att avhjälpa felet i rätt tid.”
+									</p>
+									<p>
+										”Om entreprenören har påkallat efterbesiktning men någon sådan inte kommer till stånd på grund av beställarens underlåtenhet, skall de fel som efterbesiktningen avsågs omfatta anses vara avhjälpta.”
+									</p>
+									<p>
+										<b>Handledning till kap 7 §5 i BKKs handledning till entreprenadbesiktning</b>
+										<br> ”Vid efterbesiktning ska konstateras om fel avhjälpts. I utlåtande över efterbesiktning noteras de kvarvarande fel som inte avhjälpts och eventuella följdfel som uppkommit vid avhjälpandet. Fel som inte noterats tidigare ska inte tas
+										upp vid efterbesiktning.
+										<br>
+										<br> Av beställaren skriftligt påtalat fel enligt kap7§12 ska inte heller tas upp, utan dessa ska behandlas som särskild besiktning om part påkallar sådan. Inget hindrar dock att en förrättning omfattar både efterbesiktning och särskild besiktning,
+										om detta angivits i kallelsen.”</p>
+								</li>
+							</ul>
+						</div>
 						<h3>Särskild besiktning</h3>
 						<div>
 							<ul>
