--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, ispect, ispekt, ispect-portal, besiktningar, entreprenadbesiktning, husbesiktning, besiktningsman, förbesiktning, slutbesiktning, ny slutbesiktning, fortsatt slutbesiktning, efterbesiktning, särskild besiktning, statusbesiktning, garantibesiktning, 2-årsbesiktning, överbesiktning, OVK, fuktbesiktning, överlåtelsebesiktning">
+	<meta name="keywords" content="besiktningsman.se, ispect, ispekt, ispect-portal, besiktningar, entreprenadbesiktning, husbesiktning, besiktningsman, förbesiktning, slutbesiktning, ny slutbesiktning, fortsatt slutbesiktning, efterbesiktning, särskild besiktning, statusbesiktning, garantibesiktning, 2-årsbesiktning, överbesiktning, OVK, fuktbesiktning">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
@@ -319,7 +319,41 @@
 										</li>
 									</ul>
 								</div>
-
+							<h3>Efterbesiktning</h3>
+							<div>
+								<ul>
+									<li class="col-5-12">
+										<h3 class="margin-bottom-1">
+											Efterbesiktning kan ske för att konstatera om fel som noterats vid tidigare besiktning har avhjälpts eller inte. Efterbesiktning kan påkallas av entreprenör eller beställare
+										</h3>
+										<p>
+											Besiktningsman.se erbjuder Efterbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 § 5(se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt. Vi erbjuder även komplett besiktningsgrupp.
+										</p>
+										<p>
+											Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats. Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar
+											<br>
+											<br>
+											Pris offereras separat.
+										</p>
+										<h3 class="margin-bottom-1">Enligt AB04 och ABT06 Kap 7 §5</h3>
+										<p>
+											”Part har rätt att påkalla efterbesiktning för konstaterande av om ett fel avhjälpts.
+											<br>Efterbesiktning verkställs utan dröjsmål efter avhjälpandet. Beställaren får också påkalla
+											<br>efterbesiktning om entreprenören underlåter att avhjälpa felet i rätt tid.”
+										</p>
+										<p>
+											”Om entreprenören har påkallat efterbesiktning men någon sådan inte kommer till stånd på grund av beställarens underlåtenhet, skall de fel som efterbesiktningen avsågs omfatta anses vara avhjälpta.”
+										</p>
+										<p>
+											<b>Handledning till kap 7 §5 i BKKs handledning till entreprenadbesiktning</b>
+											<br> ”Vid efterbesiktning ska konstateras om fel avhjälpts. I utlåtande över efterbesiktning noteras de kvarvarande fel som inte avhjälpts och eventuella följdfel som uppkommit vid avhjälpandet. Fel som inte noterats tidigare ska inte tas
+											upp vid efterbesiktning.
+											<br>
+											<br> Av beställaren skriftligt påtalat fel enligt kap7§12 ska inte heller tas upp, utan dessa ska behandlas som särskild besiktning om part påkallar sådan. Inget hindrar dock att en förrättning omfattar både efterbesiktning och särskild besiktning,
+											om detta angivits i kallelsen.”</p>
+									</li>
+								</ul>
+							</div>
 								<h3>Särskild besiktning</h3>
 								<div>
 									<ul>
@@ -501,41 +535,6 @@
 												<b>Källarväggar</b>	- Året om kan fukttransport ske via källarväggen från den kalla fuktiga marken vilket kan ge fukt och mögel skador på insidan av källarvägg.
 												<br>
 												<b>Betongplatta på mark</b> - Om den är utförd 1985 eller tidigare är det vanligt att fukt från underliggande mark transportas upp i betongplattan och vidare upp i uppreglat golv.
-											</p>
-										</li>
-									</ul>
-								</div>
-								<h3>Överlåtelsebesiktning enligt SBR-modellen.</h3>
-								<div>
-									<ul>
-										<li class="col-5-12">
-											<p class="bold margin-bottom-1">
-												En överlåtelsebesiktning bör ske för att kontrollera byggnaden i samband med en överlåtelse, och avser vanligtvis småhus, fritidshus, bostadsrättslägenheter eller liknande.
-												En överlåtelsebesiktning kan beställas av såväl köpare som säljare. Överlåtelsebesiktning benämns ibland ”Husbesiktning”.
-											</p>
-											<p>Besiktningsman.se erbjuder överlåtelsebesiktning enligt SBR-modellen, dvs den metod som framtagits av Svenska Byggingenjörers Riksförbund och som rekommenderas av bland annat Konsumentverket.  Våra överlåtelsebesiktningar utförs av godkända besiktningsmän utbildade av SBR eller motsvarande.</p>
-											<p>Överlåtelsebesiktningen resulterar i ett opartiskt och sakkunnigt utlåtande som kan få avsevärd betydelse om det senare skulle framkomma eller uppstå tvister eller andra problem.</p>
-											<p>Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats. Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.</p>
-											<p>Pris offereras separat.</p>
-											<p class="bold margin-bottom-1">Mer om Överlåtelsebesiktning</p>
-											<p>
-												<b>Överlåtelsebesiktning består av tre moment; startsammanträde, besiktning och slutsammanträde.</b>
-												Vi börjar alltid med ett startsammanträde där vi går igenom uppdragsbekräftelsen med information för både köpare och säljare om hur besiktningen går till.
-												Besiktningsmannen förklarar olika typer av så kallade kända riskkonstruktioner och vad det innebär.
-												Säljaren informerar besiktningsmannen och köparen om vad de känner till om huset, både positivt och negativt.
-											</p>
-											<p>
-												<b>Därefter påbörjas besiktningen</b>
-													Det innebär en okulär fastighetsbesiktning av huvudbyggnaden, där vi tillsammans besiktigar alla utrymmen som är tillgängliga via öppningar, luckor och liknande, samt de som i övrigt är krypbara.
-													Vi informerar om eventuella fel och risker med vissa konstruktioner löpande under överlåtelsebesiktningen.
-													Besiktningsmannen informerar även om löpande fastighetsskötsel och vad man som fastighetsägare skall tänka på.
-													Vi anser att det är av stor vikt att både säljare och köpare deltar och följer med i överlåtelsebesiktningen.
-											</p>
-											<p>
-												<b>Slutsammanträde</b>
-												<br>
-												Efter besiktningen sker ett slutsammanträde där vi sammanfattningsvis går igenom vad som noterats och vilken påverkan eventuella fel och risker kan ha på huset.
-												Ni får därefter ett besiktningsutlåtande som bör läsas igenom noggrant, och frågor kring utlåtandet kan då besvaras av besiktningsmannen.
 											</p>
 										</li>
 									</ul>
