removed h3 titles from efterbesiktning for consistency

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -323,9 +323,9 @@
 							<div>
 								<ul>
 									<li class="col-5-12">
-										<h3 class="margin-bottom-1">
+										<p class="bold margin-bottom-1">
 											Efterbesiktning kan ske för att konstatera om fel som noterats vid tidigare besiktning har avhjälpts eller inte. Efterbesiktning kan påkallas av entreprenör eller beställare
-										</h3>
+										</p>
 										<p>
 											Besiktningsman.se erbjuder Efterbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 § 5(se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt. Vi erbjuder även komplett besiktningsgrupp.
 										</p>
@@ -335,7 +335,7 @@
 											<br>
 											Pris offereras separat.
 										</p>
-										<h3 class="margin-bottom-1">Enligt AB04 och ABT06 Kap 7 §5</h3>
+										<p class="bold margin-bottom-1">Enligt AB04 och ABT06 Kap 7 §5</p>
 										<p>
 											”Part har rätt att påkalla efterbesiktning för konstaterande av om ett fel avhjälpts.
 											<br>Efterbesiktning verkställs utan dröjsmål efter avhjälpandet. Beställaren får också påkalla
