removed the blog link

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             </li>
             <li class="col-6-12 ae-5">
               <h3 class="margin-bottom-1">Följ oss</h3>
-							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
+							<!-- <a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a> -->
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
 							<a target="_blank" href="https://www.facebook.com/Besiktningsman/"><p class="text-blue bold">Facebook</p></a>
 							<a target="_blank" href="https://www.linkedin.com/company/24778105/"><p class="text-blue bold">Linkedin</p></a>
@@ -615,7 +615,7 @@
 
 <!-- ispect details Popup Text -->
 <div class="popup white" data-popup-id="ispect-details" id="ispect-details">
-	<div class="close button closeButton blue text-white soft-shadow bold">TILLBAKA</div>
+	<div class="close button closeButton blue text-white soft-shadow bold">X</div>
 	<div class="content popupContent">
 
 		<section class="slide white">
