--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -148,7 +148,7 @@
 							</h3>
 							<div class="margin-left-2" style="margin-top: 15px;">
 								<p class="micro bold">Magnus Janson</p>
-								<a href="mailto:magnus.janson@Besiktningsman.se"><p class="micro bold text-blue">E-post: magnus.janson@Besiktningsman.se</p></a>
+								<a href="mailto:magnus.janson@Besiktningsman.se"><p class="micro bold text-blue">E-post: magnus.janson@besiktningsman.se</p></a>
 								<a href="tel:+46101654015"><p class="micro bold text-blue">Tel: +46101654015</p></a>
 								<a href="#"><p class="micro bold text-blue">Foton</p></a>
 								<a href="../assets/svg/bm_loggor_svg.zip"><p class="micro bold text-blue">Logga</p></a>
@@ -226,7 +226,7 @@
             </li>
             <li class="col-6-12 ae-5">
               <h3 class="margin-bottom-1">Följ oss</h3>
-							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
+							<!-- <a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a> -->
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
 							<a target="_blank" href="https://www.facebook.com/Besiktningsman/"><p class="text-blue bold">Facebook</p></a>
 							<a target="_blank" href="https://www.linkedin.com/company/24778105/"><p class="text-blue bold">Linkedin</p></a>
