--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -639,7 +639,7 @@
             </li>
             <li class="col-6-12 ae-5">
               <h3 class="margin-bottom-1">Följ oss</h3>
-							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
+							<!-- <a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a> -->
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
 							<a target="_blank" href="https://www.facebook.com/Besiktningsman/"><p class="text-blue bold">Facebook</p></a>
 							<a target="_blank" href="https://www.linkedin.com/company/24778105/"><p class="text-blue bold">Linkedin</p></a>
