--- a/karriar/index.html
+++ b/karriar/index.html
@@ -6,10 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt,
-						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
-						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
-						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
+	<meta name="keywords" content="besiktningsman.se, besiktningar, ispect, besiktningsman, entreprenadingenjör">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
@@ -146,30 +143,19 @@
 
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
-							<li class="col-6-12 left ae-1 fromLeft">
+
+							<li class="col-6-12 left fromLeft">
 								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
 							</li>
-							<li class="col-6-12 left cell-32">
-								<h1 class="">Vill du...</h1>
-								<ul class="items-32">
-									<li class="fix-4-12 toLeft">
-										<p class="">− Utveckla din kompetens i ett trivsamt och intressant företag? </p>
-									</li>
-									<li class="fix-4-12 toLeft">
-										<p class="">− Arbeta i det företag som leder branschens förnyelse?</p>
-									</li>
-									<li class="fix-4-12 toLeft">
-										<p class="">− Kunna belönas bra för ambitiösa arbetsinsatser?</p>
-									</li>
-									<li class="fix-4-12 toLeft">
-										<p class="">− Bli medarbetare oavsett var i landet du bor?</p>
-									</li>
-									<li class="fix-4-12 toLeft">
-										<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
-										<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
-									</li>
-								</ul>
+							<li class="col-6-12 left cell-32">
+								<h1>Vill du...</h1>
+								<p>• Utveckla din kompetens i ett trivsamt och intressant företag? </p>
+								<p>• Arbeta i det företag som leder branschens förnyelse?</p>
+								<p>• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+								<p>• Bli medarbetare oavsett var i landet du bor?</p>
+								<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
+								<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 							</li>
 
 						</ul>
