--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -31,20 +31,10 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 	<!-- Intercom chat and user identification -->
 	<script>
-	  window.intercomSettings = {
-	    app_id: "ybt1le09"
-	  };
+		window.intercomSettings = {
+		app_id: "ybt1le09"
+	};
 	</script>
-	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-	<script>
-	  window.intercomSettings = {
-	    app_id: "ybt1le09",
-	    name: <%= current_user.name %>, // Full name
-	    email: <%= current_user.email %>, // Email address
-	    created_at: <%= current_user.created_at.to_i %>, // Signup date as a Unix timestamp
-			hide_default_launcher: true
-	  };
-	  </script>
 	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 	<!-- Intercom chat and user identification -->
 
@@ -693,8 +683,8 @@
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="../../js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="../../js/slides.js" type="text/javascript" name="main-scripts"></script>
+
+	<script src="../../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
 	<script src="../../js/custom.js" type="text/javascript" name="main-scripts"></script>
 </body>
 </html>
