--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	</script>
 	<!-- Intercom chat and user identification -->
 	<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-	<script type="text/javascript">
+	<script defer type="text/javascript">
 		window.cookieconsent_options = {
 			"message": "Besiktningsman.se använder 'cookies' för att kunna leverera en bra upplevelse.",
 			"dismiss": "Okej",
@@ -121,7 +121,7 @@
 			"theme": "light-floating"
 		};
 	</script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
+	<script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
 	<!-- End Cookie Consent plugin -->
 	<script>
 	  window.disableKeyNavigation = 0;
@@ -834,11 +834,10 @@
 
 
 	<!-- Scripts -->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<script src="js/custom.js" type="text/javascript" name="main-scripts"></script>
+	<script async src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script async src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script async src="js/slides.js" type="text/javascript" name="main-scripts"></script>
+	<script async src="js/custom.js" type="text/javascript" name="main-scripts"></script>
 
 </body>
 
