that branch merge fucked the scripts

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -24,10 +24,9 @@
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
-	<link defer href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
-	<!-- Intercom chat and user identification -->
 	<!-- Intercom chat and user identification -->
 	<script>
 		window.intercomSettings = {
@@ -463,7 +462,6 @@
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
 	<script src="../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
 </body>
 
