--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
-	<link defer href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
 	<link href="css/slides.css" rel="stylesheet" type="text/css">
-<<<<<<< HEAD
 	<!-- accordion styling -->
-	<link defer rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-
-=======
->>>>>>> f3be48965907d6b15439655f3aeb6178184e73c6
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 	<!-- Intercom chat and user identification -->
 	<script>
 		window.intercomSettings = {
@@ -765,17 +761,10 @@
 
 
 	<!-- Scripts -->
-<<<<<<< HEAD
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="js/slides.min.js" type="text/javascript" name="main-scripts"></script>
 	<script src="js/custom.js" type="text/javascript" name="main-scripts"></script>
-=======
-	<script async src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script async src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script async src="js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<script async src="js/custom.js" type="text/javascript" name="main-scripts"></script>
->>>>>>> f3be48965907d6b15439655f3aeb6178184e73c6
 
 </body>
 
