--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -24,36 +24,18 @@
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
-	<link defer href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
 	<link href="../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- accordion styling -->
-	<link defer rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 	<!-- Intercom chat and user identification -->
 	<script>
-<<<<<<< HEAD
 		window.intercomSettings = {
 		app_id: "ybt1le09"
 	};
 	</script>
 	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-=======
-	  window.intercomSettings = {
-	    app_id: "ybt1le09"
-	  };
-	</script>
-	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-	<script>
-	  window.intercomSettings = {
-	    app_id: "ybt1le09",
-	    name: <%= current_user.name %>, // Full name
-	    email: <%= current_user.email %>, // Email address
-	    created_at: <%= current_user.created_at.to_i %>, // Signup date as a Unix timestamp
-			hide_default_launcher: true
-	  };
-	  </script>
-	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
->>>>>>> f3be48965907d6b15439655f3aeb6178184e73c6
 	<!-- Intercom chat and user identification -->
 
 </head>
