Fix for popover not displaying text on mobile

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
 						<p class="hero" style="font-weight: 400;">Sveriges ledande entreprenadbesiktningsföretag</p>
-						<a href="#entreprenad" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">ENTREPRENAD</a><a href="#brf" class="common-Button white text-blue fromCenter">BRF / PRIVAT</a>
+						<a href="#entreprenad" class="common-Button white text-blue fromCenter">ENTREPRENAD</a><a href="#brf" class="common-Button white text-blue fromCenter" id="landingButton2">BRF / PRIVAT</a>
 					</div>
 
 				</div>
