Footer logo sizing fix for mobile, also headers

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -112,7 +112,7 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide fade kenBurns" id="">
+	<section class="slide fade kenBurns" id="landingHeader">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
