updated text for E-besiktning

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 			<div class="container" style="height: 360px;">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="">Vårt erbjudande</h1>
+						<h1>Vårt erbjudande</h1>
 						<p class="menu inlineBlock margin-right-2 underline"><a href="#entreprenad">Entreprenad</a></p>
 						<p class="menu inlineBlock underline"><a href="#brf">BRF</a></p>
 						<p class="menu inlineBlock margin-left-2 underline"><a href="#privat">Privat</a></p>
@@ -268,7 +268,7 @@
 									Vi erbjuder också ett samlat helhetskoncept med besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
 								</p>
 								<p>
-									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
+									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
 								</p>
 								<!-- <a href="/tjanster/entreprenad/#entreprenad-offer">
 									<p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
