Contact page mobile fixes

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -113,7 +113,7 @@
 	</nav>
 
 	<!-- typeform contact form --><!-- HEADER -->
-	<section class="slide fade contact">
+	<section class="slide fade contact" id="contactHeader">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -121,7 +121,7 @@
 					<p>
 						<a href="tel:0101654000" class="bold text-white opacity-10">Telefon: 010-165 40 00</a>
 					</p>
-					<div class="fix-5-12">
+					<div class="fix-5-12" id="contactModal">
 						<div class="pad shadow selected">
 							<h3 class="pad-header margin-0 text-blueGrey">
 								Inte tid att ringa?
