--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -151,7 +151,7 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero" style="font-weight: 400;">Besiktningstjänster för bostadsrättsföreningar</h1>
 						<p class="hero small">
-							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för besiktningstjänster vid nyproduktion, ROT och KA för bostadsrättsföreningar.
+							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster <br>vid nyproduktion, ROT och KA för bostadsrättsföreningar.
 						</p>
 					</div>
 
