Fix private services list title

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -166,7 +166,7 @@
 						</p>
 				</div>
 				<div class="fix-10-12 left">
-					<h2 class="small bold">Traditionella besiktningar enligt AB-ABT</h2>
+					<h2 class="small bold">Traditionella besiktningar enligt ABS och KtjL-konsumenttjänst lagen</h2>
 					<div class="accordion">
 						<h3>Förbesiktning</h3>
 						<div>
