text fix for services

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
 								<p>
-									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-ansvariga, för bostadrättsfastigheter.
+									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-ansvariga, för bostadrättsfastigheter.
 								</p>
 								<!-- <a href="/tjanster/brf/#brf-offer">
 									<p class="common-Link">Mer om vårt erbjudande<i class="icono-arrow2-left"></i></p>
@@ -392,7 +392,7 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för privatpersoner</h1>
 								<h3>Småhus, lägenheter, fritidshus</h3>
-								<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
+								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<!-- <a href="/tjanster/privat/#privat-offer">
 									<p class="common-Link">Mer om besiktning för småhus mm<i class="icono-arrow2-left"></i></p>
 								</a> -->
