About us title styling removed to be consistent

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -137,12 +137,10 @@
 			<div class="container">
 				<div class="wrap">
 
-					<div class="fix-10-12">
-						<h1 class="fromCenter">
+					<div class="fix-10-12 left">
+						<h1>
 							Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess.
 						</h1>
-						<div class="margin-bottom-4 border-bottom-grey"></div>
-						<div class="left cropBottom">
 							<p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
 							<p>Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
 							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga
@@ -151,7 +149,6 @@
 							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
 							<p>Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen, har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
 							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
-						</div>
 					</div>
 
 				</div>
