Mobile menu fix

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<li><a href="nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
-				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold small">Dokument</p></div></li>
+				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold">Dokument</p></div></li>
 			</ul>
 
 		</div>
