--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -134,7 +134,7 @@
 				<br>
 				<li>
 					<div class="popupTrigger" data-popup-id="docs">
-						<p class="bold small">Dokument</p>
+						<p class="bold">Dokument</p>
 					</div>
 				</li>
 			</ul>
