--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -109,7 +109,7 @@
 				<li><a href="../nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
-				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold small">Dokument</p></div></li>
+				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold">Dokument</p></div></li>
 			</ul>
 
 		</div>
