offertförfrågan-btn för entreprenadslide

--- a/index.html
+++ b/index.html
@@ -174,13 +174,37 @@
 										<i class="icono-arrow2-left"></i>
 									</p>
 								</a>
-								<!-- typeform button -->
-								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									KONTAKTA MIG
-								</a>
-								<!-- typeform JS -->
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-
+								<ul class="items-32">
+									<li class="fix-4-12 toLeft fromLeft text-32">
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
+										<script>
+											(function() {
+												var qs, js, q, s, d = document,
+													gi = d.getElementById,
+													ce = d.createElement,
+													gt = d.getElementsByTagName,
+													id = 'typef_orm_share',
+													b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+												if (!gi.call(d, id)) {
+													js = ce.call(d, 'script');
+													js.id = id;
+													js.src = b + 'share.js';
+													q = gt.call(d, 'script')[0];
+													q.parentNode.insertBefore(js, q)
+												}
+												id = id + '_';
+												if (!gi.call(d, id)) {
+													qs = ce.call(d, 'link');
+													qs.rel = 'stylesheet';
+													qs.id = id;
+													qs.href = b + 'share-button.css';
+													s = gt.call(d, 'head')[0];
+													s.appendChild(qs, s)
+												}
+											})()
+										</script>
+									</li>
+								</ul>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<!-- Projects: Slider Autoplay -->
