Changes for text and images

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/summer/sodermalm_summer.jpg)" alt="Foto av Södermälarstrand, Södermalm"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/winter/sodermalm_winter.jpg)" alt="Foto av Södermälarstrand, Södermalm, Stockholm"></div>
 	</section>
 	<!-- ENTERPRISE START -->
 	<section class="slide whiteSlide fromLeft autoHeight" id="enterprise">
@@ -329,12 +329,12 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/summer/summer_apartments.jpg" alt="Foto av BRF i Downtown, Raleigh, North Carolina." />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
 								<p>
-									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-ansvariga, för bostadrättsfastigheter.
+									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
 								<!-- <a href="/tjanster/brf/#brf-offer">
 									<p class="common-Link">Mer om vårt erbjudande<i class="icono-arrow2-left"></i></p>
@@ -433,7 +433,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/backgrounds/summer/summer_house.jpg" alt="Fritidshus på svenska västkusten." />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
 							</li>
 						</ul>
 					</div>
@@ -570,7 +570,6 @@
 										Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja.
 										Ofta sedan byggnaden tagits i bruk.
 										<br>
-										<br>
 										Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
 									</p>
 								</li>
@@ -585,8 +584,6 @@
 										<br>
 										•	Felbilagorna sorterade i portalen
 										<br>
-										•	”Digital nyckel” vid överlämnande till Byggherren
-										<br>
 										•	Inga onödiga produktionsstopp
 										<br>
 										•	Ökad kvalitetssträvan främjas
@@ -598,6 +595,8 @@
 										•	Utvärdering av de olika entreprenörskategorierna
 										<br>
 										•	Skapar förutsättning för till noll fel vid överlämnandet
+										<br>
+										•	”Digital nyckel” vid överlämnande till Byggherren
 										<br>
 										•	Med vår besiktningsapp ges tillgång till en feldadatabas, en ”Byggfelsbank” byggd på mångårig erfarenhet av besiktningar med ca 300 000 av de vanligaste byggfelen i byggbranschen.
 									</p>
@@ -621,9 +620,7 @@
 									<p class="small">
 										I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi vår besiktningsapp iSpect.
 										<br>
-										<br>
 										Med iSpect effektiviseras besiktningen oberoende av vem besiktningspersonen är, och utlåtandet utformas med ett nominellt språk. All pappershantering med utlåtanden, bilagor etc elimineras.
-										<br>
 										<br>
 										Vår lösning med iSpect omfattar hela besiktningsprocessen.
 									</p>
