--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -151,14 +151,14 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero" style="font-weight: 400;">Besiktningstjänster för bostadsrättsföreningar</h1>
 						<p class="hero small">
-							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster <br>vid nyproduktion, ROT och KA för bostadsrättsföreningar.
+							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster <br>vid nyproduktion, ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
 						</p>
 					</div>
 
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../assets/img/backgrounds/summer/summer_apartments.jpg)" alt="Foto av BRF i Downtown, Raleigh, North Carolina."></div>
+		<div class="background" style="background-image:url(../../assets/img/backgrounds/winter/winter_apartments.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
 	<section class="slide whiteSlide autoHeight" id="brf-offer">
 		<div class="container">
@@ -452,11 +452,11 @@
 					<!-- övriga tjänster -->
 					<h2 class="small bold">Övriga tjänster</h2>
 					<div class="accordion margin-bottom-3">
-						<h3>Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
+						<h3>KA-Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
 						<div>
 							<ul>
 								<li class="col-5-12">
-									<p class="bold margin-bottom-1">Vid nyproduktion, om- och tillbyggnad där det behövs bygglov krävs en Kontrollansvarig (KA). En KA kan även behövas vid rivning eller markarbeten</p>
+									<p class="bold margin-bottom-1">Vid nyproduktion, om- och tillbyggnad där det behövs bygglov krävs en KA-Kontrollansvarig. En KA kan även behövas vid rivning eller markarbeten</p>
 									<p>
 										Den Kontrollansvarige ska kontrollera att de myndighetskrav och bygg- och branschregler som ställs på arbetena uppfylls. Dessa krav kan exempelvis avse ventilation, energianvändning, fuktsäkerhet, tillgänglighet samt att de för arbetena gällande säkerhetsreglerna
 										uppfylls.
