--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/newspapercoffee.jpg"></div>
 	</section>
 
 
