--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 
 	<!-- OUR SERVICES -->
-	<section class="slide fade autoHeight" id="erbjudande">
+	<section class="slide fade autoHeight" id="erbjudande" name="erbjudande">
 		<div class="content">
 			<div class="container" style="height: 360px;">
 				<div class="wrap">
@@ -252,7 +252,7 @@
 	</section>
 
 	<!-- ENTERPRISE -->
-	<section class="slide whiteSlide fromRight autoHeight" data-name="entreprenad" data-title="entreprenad" id="entreprenad">
+	<section class="slide whiteSlide fromRight autoHeight" data-name="entreprenad" name="entreprenad" data-title="entreprenad" id="entreprenad">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -310,7 +310,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" height="700" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
 							</li>
 						</ul>
 					</div>
@@ -321,7 +321,7 @@
 	</section>
 
 	<!-- ESTATES -->
-	<section class="slide whiteSlide fromRight autoHeight" data-name="brf" data-title="brf" id="brf">
+	<section class="slide whiteSlide fromRight autoHeight"  name="brf" data-name="brf" data-title="brf" id="brf">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -329,7 +329,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
@@ -382,7 +382,7 @@
 	</section>
 
 	<!-- PRIVATE -->
-	<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
+	<section class="slide whiteSlide kenBurns fromLeft autoHeight"  name="privat" data-name="privat" data-title="privat" id="privat">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -433,7 +433,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="1000" height="700" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
 							</li>
 						</ul>
 					</div>
@@ -451,7 +451,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" height="700" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vår digitala besiktningsprocess</h1>
