Marcus fixes for the accordion, making it em linkable

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -377,7 +377,7 @@
 					<h2 class="small bold">Övriga tjänster</h2>
 					<div class="accordion margin-bottom-3">
 
-						<h3>OVK - Obligratorisk ventilationskontroll</h3>
+						<h3>OVK - Obligatorisk ventilationskontroll</h3>
 						<div>
 							<ul>
 								<li class="col-5-12">
