--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -5,7 +5,7 @@
 	<title>Besiktningsman.se | Privat</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes" /> §
+	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
