--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -146,7 +146,7 @@
 							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga
 								fack.</p>
 							<p>Huvudkontoret är placerat i Stockholm och medarbetare finns över hela landet.</p>
-							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
+							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag.</p>
 							<p>Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen, har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
 							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
 					</div>
