--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -122,8 +122,12 @@
 			<div class="container" style="height: 560px;padding-top: 5%;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<img src="../assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;width:60% !important;">
-						<p>Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT. <br> Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.</p>
+						<img src="../assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="margin-bottom-1" style="height: 100%;">
+						<p>
+							Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT.
+							<br>
+							Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -132,22 +136,36 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/bm_front.jpg)"></div>
 	</section>
 	<!-- Slide #24 -->
-	<section class="slide whiteSlide kenBurns">
+	<section class="slide whiteSlide kenBurns" id="aboutUs">
 		<div class="content">
-			<div class="container">
+			<div class="container-lg">
 				<div class="wrap">
 
-					<div class="fix-10-12 left">
+					<div class="fix-10-12 left margin-top-1">
 						<h1>
 							Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess.
 						</h1>
-							<p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
+							<p>
+								Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader.
+								Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden.
+								Våra grundare och ägare är alltjämt aktiva i företaget.
+							</p>
 							<p>Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
-							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga
-								fack.</p>
-							<p>Huvudkontoret är placerat i Stockholm och medarbetare finns över hela landet.</p>
-							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag.</p>
-							<p>Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen, har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
+							<p>
+								Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete.
+								<br>
+								Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande.
+								<br>
+								Vi erbjuder kompletta besiktningsgrupper för samtligafack.</p>
+							<p>
+								Huvudkontoret är placerat i Stockholm och medarbetare finns över hela landet.</p>
+							<p>
+								Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag.
+							</p>
+							<p>
+								Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen,
+								har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt
+							</p>
 							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
 					</div>
 
@@ -156,15 +174,13 @@
 		</div>
 	</section>
 	<!-- team -->
-	<section class="slide whiteSlide margin-bottom-5" id="team" data-name="team">
+	<section class="slide whiteSlide" id="team" data-name="team">
 		<div class="content">
 			<div class="container-lg">
 				<div class="wrap left">
 
 					<div class="fix-10-12">
 						<h1>Ledning</h1>
-					</div>
-					<div class="fix-10-12">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
