removed old employees

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -240,16 +240,9 @@
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Carina Sandgren</h3>
-										<p class="micro bold">Projektassistent</p>
-										<a href="mailto:carina@besiktningsman.se">
-											<p class="micro bold text-blue">carina@besiktningsman.se</p>
-										</a>
-									</li>
-									<li class="col-3-12">
 										<h3 class="">Madeleine Pettersson</h3>
 										<p class="micro bold">Projektassistent</p>
-										<a href="mailto:carina@besiktningsman.se">
+										<a href="mailto:madde@besiktningsman.se">
 											<p class="micro bold text-blue">madde@besiktningsman.se</p>
 										</a>
 									</li>
@@ -356,13 +349,6 @@
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Konrad Stockenvall</h3>
-										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:konrad@besiktningsman.se">
-											<p class="micro bold text-blue">konrad@besiktningsman.se</p>
-										</a>
-									</li>
-									<li class="col-3-12">
 										<h3 class="">Göran Svensson</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:goran@besiktningsman.se">
@@ -388,20 +374,6 @@
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:leo@besiktningsman.se">
 											<p class="micro bold text-blue">leo@besiktningsman.se</p>
-										</a>
-									</li>
-									<li class="col-3-12">
-										<h3 class="">Birger Faith-Ell</h3>
-										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:birger@besiktningsman.se">
-											<p class="micro bold text-blue">birger@besiktningsman.se</p>
-										</a>
-									</li>
-									<li class="col-3-12">
-										<h3 class="">Anders Widman</h3>
-										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:anders@besiktningsman.se">
-											<p class="micro bold text-blue">anders@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
